--- a/project/code/threejs-port/index.html
+++ b/project/code/threejs-port/index.html
@@ -15,11 +15,7 @@
     <div id="overlay">
       <div id="title">
         <h1>Log<span class="accent">Spiral</span></h1>
-        <p class="subtitle">3D Logarithmic Spiral Visualization</p>
-      </div>
-      <div id="stats">
-        <span id="fps">0 FPS</span>
-        <span id="curve-points">0 points</span>
+        <p class="subtitle">3D Logarithmic Spiral Camera Trajectory</p>
       </div>
     </div>
     <div id="controls-hint">
